# obs-mac-virtualcam

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
coremediaio-dal-ipc/: CMakeLists.txt
coremediaio-dal-ipc/server/: CMIO_DPA_Sample_Server_Assistant.cpp
coremediaio-dal-ipc/server/Device/: CMIO_DPA_Sample_Server_Device.h  CMIO_DPA_Sample_Server_Stream.cpp
dal-plugin/: CMakeLists.txt
dal-plugin/PlugIn/: CMIO_DP_Sample_PlugIn.cpp
dal-plugin/src/: CMIO_DP_Sample_Device.h  CMIO_DP_Sample_PlugIn.cpp  Info.plist
mac-virtualcam-dal-plugin/: CMakeLists.txt
mac-virtualcam-obs-plugin/: CMakeLists.txt
obs-plugin/: CMakeLists.txt
obs-plugin/src/: OBSVirtualCamDevice.cpp  OBSVirtualCamDevice.h  OBSVirtualCamServer.cpp  OBSVirtualCamServer.h  plugin-main.cpp
src/CoreAudio/PublicUtility/: CAPropertyAddress.h
src/CoreMediaIO/DeviceAbstractionLayer/Devices/Sample/PlugIn/: Info.plist
src/coremediaio-dal-ipc/: coremediaio-dal-ipc.pc.in
src/coremediaio-dal-ipc/server/Device/: CMIO_DPA_Sample_Server_VCamInputStream.h
src/dal-plugin/: CMakeLists.txt
